# rustane

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Makefile  Optimization.md  Optimization_implementation_plan.md  Optimization_implementation_plan_v2.md  Optimization_implementation_plan_v4.md  Optimization_implementation_plan_v5.md  Optimization_implementation_plan_v6.md  Optimization_implementation_plan_v7.md  Optimization_implementation_plan_v8.md  Optimization_implementation_plan_v9.md  README.md  Sharded_FFN_Forward_Optimization_Plan.md  Sharded_FFN_Forward_Optimization_Plan_v2.md  Sharded_FFN_Forward_Optimization_Plan_v3.md  Sharded_Training_Backward_Timing_Harness_Parallelization.md  Sharded_Training_Backward_Timing_Harness_Parallelization_v2.md  Sharded_Training_Backward_Timing_Harness_Parallelization_v3.md  Sharded_Training_Backward_Timing_Harness_Parallelization_v4.md  Sharded_Training_Backward_Timing_Harness_Parallelization_v5.md  Sharded_Training_Backward_Timing_Harness_Parallelization_v6.md  ane_audit_findings.md  bench_result_queue_plan.md  bench_result_queue_plan_v2.md  bench_result_queue_plan_v3.md  bench_result_queue_plan_v4.md  bench_result_queue_plan_v5.md  bench_result_queue_plan_v6.md  bench_result_queue_plan_v7.md  bench_result_queue_plan_v8.md  iosurface_hypothesis_plan_1_v1.md  iosurface_hypothesis_plan_1_v2.md  iosurface_hypothesis_plan_1_v3.md
crates/engine/: Cargo.toml
crates/engine/src/: bench_result.rs  data.rs  full_model.rs  layer.rs  lib.rs  metal_adam.rs  model.rs  multistream.rs  parallel_bench.rs  sharding.rs  (+1 more)
(+202 files in other folders)
