[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
ane-bridge = { path = "../ane-bridge" }
metal-decode = { path = "../metal-decode" }
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
memmap2 = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
objc2-foundation = { workspace = true }
